@@ -65,7 +65,7 @@ AL:355:00:0
 AM:374:00:0
 BQ:599:00:
 AO:244:00:
-AQ:672::
+AQ:672:0011:
 AR:54:00:0
 AS:1:011:1
 AT:43:00:0
@@ -167,7 +167,7 @@ JP:81:010:0
 KE:254:000:0
 KG:996:00:0
 KH:855:001;007:0
-KI:686:00:
+KI:686:00:0
 KM:269:00:
 KN:1:011:1
 KP:850:00:0
