@@ -1,5 +1,7 @@
 XXXX-XX-XX      XXXXXX  Expose libphonenumber's IDD prefix regexes
-                          (see https://github.com/DrHyde/perl-modules-Number-Phone/pull/89)
+                          (see https://github.com/DrHyde/perl-modules-Number-Phone/pull/89);
+                        New NANP area codes for Jamaica and Canada;
+                        Data updates
 
 2018-06-19      3.4005  Improved formatting of UK mobile and pager numbers
                           (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/75);
